# efibootguard

./: .gitignore  CMakeLists.txt  cifuzz.yaml  dic.dict  fuzztest.cpp  lcov.info
fuzztests/: fuzztest.cpp  lib.cpp
mocks/include/: config.h  efi.h
mocks/src/: mocks.c  wrappers.cpp
stubs/include/: config.h
stubs/src/: mocks.c
